# SDLStudy

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sundy/sdlstudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sundy/sdlstudy/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/sundy/sdlstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
